--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/src/client/node_modules
+/src/server/node_modules
 /.pnp
 .pnp.js
 
@@ -10,6 +12,8 @@
 
 # production
 /build
+/src/client/build
+/src/server/build
 
 # misc
 .DS_Store
