--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,23 +1,24 @@
 {
   "name": "message-board",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "ts-node": "^8.3.0"
+    "ts-node": "^8.3.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "concurrently \"npm run server:prod\" \"npm run client:prod\"",
-    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "server:prod": "cd src/server && npm run start",
-    "client:prod": "cd src/client && npm run build",  
-    "server:dev": "cd src/server && npm run dev",
-    "client:dev": "cd src/client && npm run start"
+    "start": "npm install && tsc && node ./build/src/index.js",
+    "build": "tsc",
+    "dev": "nodemon --config \"./nodemon.json\"/"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/uuid": "^3.4.5",
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.1",
     "ts-node-dev": "^1.0.0-pre.42",
