--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "start": "concurrently \"npm run server:prod\" \"npm run client:prod\"",
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "server:prod": "cd src/server && npm run start",
-    "client:prod": "cd src/client && npm run build",  
+    "client:prod": "cd src/client && npm run build",
     "server:dev": "cd src/server && npm run dev",
     "client:dev": "cd src/client && npm run start"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/uuid": "^3.4.5",
     "concurrently": "^4.1.2",
     "nodemon": "^1.19.1",
     "ts-node-dev": "^1.0.0-pre.42",
