--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.3",
-    "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
@@ -37,5 +36,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "@types/react": "^16.9.2"
+  }
 }
